[package]
name = "tcp-server"
version = "0.1.0"
edition = "2024"
default-run = "server"

[lib]
name = "tcp_protocol"
path = "src/lib.rs"


[[bin]]
name = "server"
path = "src/main_server.rs"

[[bin]]
name = "client"
path = "src/main_client.rs"

[dependencies]
clap = { version = "4.5.58", features = ["derive", "env"] }
dashmap = "6.1.0"
logos = "0.16.1"
mio = { version = "1.1.1", features = ["os-poll", "net"] }
nom = "8.0.0"
thiserror = "2.0.18"
